tests/ui/parser/inline-const-without-block.stderr
error: expected `{`, found `2`
  --> $DIR/inline-const-without-block.rs:15:15
   |
LL |         const 2 => {}
   |               ^ expected `{`
   |
help: you might have meant to write this as part of a block
   |
LL |         const { 2 } => {}
   |               +   +

error: expected `{`, found `1`
  --> $DIR/inline-const-without-block.rs:22:15
   |
LL |         const 1 + 2 * 3 / 4 => {}
   |               ^ expected `{`
   |
help: you might have meant to write this as part of a block
   |
LL |         const { 1 + 2 * 3 / 4 } => {}
   |               +               +

error: expected `{`, found `one`
  --> $DIR/inline-const-without-block.rs:29:15
   |
LL |         const one() => {}
   |               ^^^ expected `{`
   |
help: you might have meant to write this as part of a block
   |
LL |         const { one() } => {}
   |               +       +

error: expected `{`, found `2`
  --> $DIR/inline-const-without-block.rs:39:19
   |
LL |     let x = const 2;
   |                   ^ expected `{`
   |
help: you might have meant to write this as part of a block
   |
LL |     let x = const { 2 };
   |                   +   +

error: expected `{`, found `1`
  --> $DIR/inline-const-without-block.rs:47:19
   |
LL |     let y = const 1 + 2 * 3 / 4;
   |                   ^ expected `{`
   |
help: you might have meant to write this as part of a block
   |
LL |     let y = const { 1 + 2 * 3 / 4 };
   |                   +               +

error: aborting due to 5 previous errors

